RESOLVED FIXED267787
GPU process visibility propagation is incorrectly implemented
https://bugs.webkit.org/show_bug.cgi?id=267787
Summary GPU process visibility propagation is incorrectly implemented
Per Arne Vollan
Reported 2024-01-19 14:35:49 PST
The new implementation is incorrectly using the process object for the WebContent process.
Attachments
Per Arne Vollan
Comment 1 2024-01-19 14:36:08 PST
Per Arne Vollan
Comment 2 2024-01-19 14:41:41 PST
EWS
Comment 3 2024-01-19 21:56:22 PST
Committed 273258@main (cb6d11169cbe): <https://commits.webkit.org/273258@main> Reviewed commits have been landed. Closing PR #22996 and removing active labels.
Alexey Proskuryakov
Comment 4 2024-01-31 09:00:20 PST
*** Bug 268374 has been marked as a duplicate of this bug. ***
Alexey Proskuryakov
Comment 5 2024-02-08 09:27:40 PST
*** Bug 268611 has been marked as a duplicate of this bug. ***
Note You need to log in before you can comment on or make changes to this bug.