GPU process visibility propagation is incorrectly implemented https://bugs.webkit.org/show_bug.cgi?id=267787 rdar://121256297

Reviewed by Chris Dumez.

The new implementation is incorrectly using the process object for the WebContent process.

* Source/WebKit/UIProcess/ios/WKContentView.mm:
(-[WKContentView _setupVisibilityPropagationViewForGPUProcess]):

Canonical link: https://commits.webkit.org/273258@main